# spex

./: .credo.exs  .formatter.exs  .gitignore  Cargo.toml  LICENSE  README.md  mix.exs
config/: test.exs  test_meta.exs
doc/: .build  .build.epub  .build.markdown  404.html  Mix.Tasks.Spex.html  Mix.Tasks.Spex.md  Spex.Application.html  Spex.Application.md  Spex.BisimilarityChecker.MercWrapper.html  Spex.BisimilarityChecker.MercWrapper.md  Spex.BisimilarityChecker.html  Spex.BisimilarityChecker.md  Spex.Errors.DetsError.html  Spex.Errors.DetsError.md  Spex.Errors.FileError.html  Spex.Errors.FileError.md  Spex.Errors.ImplModelError.html  Spex.Errors.ImplModelError.md  Spex.Errors.InstanceError.html  Spex.Errors.InstanceError.md  Spex.Errors.Template.html  Spex.Errors.Template.md  Spex.Errors.TransitionError.html  Spex.Errors.TransitionError.md  Spex.Errors.html  Spex.Errors.md  Spex.ImplModel.html  Spex.ImplModel.md  Spex.ImplModelStore.html  Spex.ImplModelStore.md  Spex.InstanceManager.DistributedInstanceManager.DistributionFactorState.html  Spex.InstanceManager.DistributedInstanceManager.DistributionFactorState.md  Spex.InstanceManager.DistributedInstanceManager.html  Spex.InstanceManager.DistributedInstanceManager.md  Spex.InstanceManager.Instance.html  Spex.InstanceManager.Instance.md  Spex.InstanceManager.InstanceStore.html  Spex.InstanceManager.InstanceStore.md  Spex.InstanceManager.Server.html  Spex.InstanceManager.Server.md  (+18 more)
lib/: spex.ex
native/spex_merc_wrapper/: Cargo.toml  README.md
native/spex_merc_wrapper/src/: lib.rs
test/: spex_test.exs  (+1 more)
(+38 files in other folders)
